syntax = "proto3";
package pb;

import "common.proto";

// 打开野外boss时
message FieldBossLoadReq{
	int32 area = 1;	//区域
}
message FieldBossLoadAck{
	repeated FieldBossNtf fieldBoss = 1;
}

// 战斗
message EnterFieldBossFightReq {
	int32 stageId = 1;
}
message EnterFieldBossFightAck {
	int32 stageId = 1;
	int32 dareNum = 2;
}
message FieldBossFightResultNtf{
	int32 stageId 			= 1;	//关卡ID
	int32 result 			= 2;	//战斗结果
	int32 dareNum			= 3;	//讨伐次数
	BriefUserInfo winner 			= 4;	//归属者名称
	GoodsChangeNtf goods 	= 5;	//掉落物品
}

//购买次数
message FieldBossBuyNumReq{
	bool use = 1;	//是否购买并使用
	int32 buyNum = 2;	//购买次数
}
message FieldBossBuyNumAck{
	int32 buyNum = 1;	//已购买次数
}

//领取首次奖励
message FieldBossFirstReq{}
message FieldBossFirstAck{
	bool firstReceive 	 = 1;
	GoodsChangeNtf goods = 2;
}

// 推送野外首领信息
message FieldBossNtf{
	int32 stageId 		= 1;
	float blood 		= 2;
	int64 reliveTime 	= 3;
	int32 area			= 4;
}
